# taskai

./: Cargo.toml  README.md
crates/cli/: Cargo.toml
crates/cli/src/: cmd_done.rs  cmd_next.rs  main.rs
crates/core/: Cargo.toml
crates/core/prompts/: system_en.txt  system_fr.txt
crates/core/src/: lib.rs  next.rs  validate.rs
crates/schema/: Cargo.toml
crates/schema/src/: lib.rs
examples/: hello_web.txt  hello_web_with_state.yml
tests/: mark_done.rs
