[workspace]
members = [
    "crates/schema",
    "crates/core",
    "crates/cli",
]
resolver = "2"

[workspace.dependencies]
clap = "4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
schemars = "0.8"
tokio = { version = "1.38", features = ["full"] }
llm = { version = "1.2.2", features = ["openai"] }
tempfile = "3.8"