[package]
name = "taskai-core"
version = "0.1.0"
edition = "2021"
description = "Core functionality for TaskAI - AI-powered task generation for agents and automation workflows"
authors = ["Tristan Granier <graniet75@gmail.com>"]
license = "MIT"
repository = "https://github.com/graniet/taskai"
keywords = ["ai", "agent", "backlog", "task", "generator"]
categories = ["api-bindings"]

[dependencies]
taskai-schema = { path = "../schema", version = "0.1.0" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
llm = { workspace = true }