[package]
name = "taskai-schema"
version = "0.1.0"
edition = "2021"
description = "Schema definitions for TaskAI - structured task representation for AI agents"
authors = ["Tristan Granier <graniet75@gmail.com>"]
license = "MIT"
repository = "https://github.com/graniet/taskai"
keywords = ["schema", "backlog", "task", "agent", "ai"]
categories = ["data-structures"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
schemars = { workspace = true }